Add docker socket symlink

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     "forgejo"
   ],
   "cSpell.ignoreWords": [
-    "svscan"
+    "notifyoncheck",
+    "svscan",
+    "svscanctl",
+    "svwait"
   ]
 }
