Add symlink in Dockerfile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
   "cSpell.words": [
+    "buildx",
+    "codeberg",
     "dind",
-    "forgejo"
+    "forgejo",
+    "Gitea"
   ],
   "cSpell.ignoreWords": [
     "notifyoncheck",
