--- a/.forgejo/workflows/docker-build.yaml
+++ b/.forgejo/workflows/docker-build.yaml
@@ -3,14 +3,7 @@ name: Docker Build
 
 # yamllint disable-line rule:truthy
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
   workflow_dispatch:
 
 concurrency:
@@ -19,28 +12,25 @@ concurrency:
 
 jobs:
   build:
+    name: Build Docker Image
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 15
+
+    permissions:
+      contents: read
+
     steps:
       - name: ⤵️ Checkout repository
         # yamllint disable-line rule:line-length
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
-      - name: 🔧 Set up Docker Buildx
+      - name: 🏗️ Set up Docker Buildx
         # yamllint disable-line rule:line-length
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3
 
-      - name: 🔑 Login to local registry
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3
-        with:
-          registry: ${{ vars.REGISTRY }}
-          username: ${{ vars.ACTIONS_USER }}
-          password: ${{ secrets.PACKAGES_TOKEN }}
-
-      - name: 🧱 Docker Build and push latest
+      - name: 👷 Docker Build
         # yamllint disable-line rule:line-length
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6
         with:
           context: .
-          push: true
-          tags: ${{ vars.REGISTRY }}/${{ gitea.repository }}:latest
+          push: false
