Set correct secrets and vars

--- a/.forgejo/workflows/docker-build-and-push.yaml
+++ b/.forgejo/workflows/docker-build-and-push.yaml
@@ -27,7 +27,7 @@ jobs:
             registry_token: ${{ secrets.DOCKERHUB_TOKEN }}
             image: ${{ vars.DOCKERHUB_USERNAME }}/forgejo-runner-dind
           - registry: 1d.lol
-            registry_username: ${{ github.repository_owner }}
+            registry_username: ${{ vars.LOCAL_PACKAGES_USERNAME }}
             registry_token: ${{ secrets.LOCAL_PACKAGES_TOKEN }}
             image: 1d.lol/${{ github.repository }}
 
