--- a/.forgejo/workflows/docker-release.yaml
+++ b/.forgejo/workflows/docker-release.yaml
@@ -56,34 +56,6 @@ jobs:
           echo "Exporting major version: ${MAJOR_VERSION}"
           echo "major_forgejo_version=$MAJOR_VERSION" >> "$GITHUB_OUTPUT"
 
-  tag:
-    name: Update Git Tags
-    runs-on: ubuntu-latest
-    timeout-minutes: 2
-    needs: [version]
-
-    permissions:
-      contents: write
-
-    steps:
-      - name: ⤵️ Checkout repository
-        # yamllint disable-line rule:line-length
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
-      - name: 🚀 Update tags
-        run: |
-          git tag -fa "$SEMVER_TAG" -m "$SEMVER_TAG"
-          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
-          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
-
-          git push -f origin --tags
-        env:
-          GIT_COMMITTER_NAME: Actions Bot
-          GIT_COMMITTER_EMAIL: actions@1d.lol
-          SEMVER_TAG: ${{ needs.version.outputs.full_version }}
-          MINOR_TAG: ${{ needs.version.outputs.minor_version }}
-          MAJOR_TAG: ${{ needs.version.outputs.major_version }}
-
   build-and-push:
     name: Docker Build and Push Container to registries
     runs-on: ubuntu-latest
@@ -128,9 +100,9 @@ jobs:
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
             type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+            type=semver,pattern={{version}},value=${{ needs.version.outputs.full_version }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ needs.version.outputs.full_version }}
+            type=semver,pattern={{major}},value=${{ needs.version.outputs.full_version }}
           # yamllint disable rule:line-length
           labels: |
             org.opencontainers.image.title=Forgejo Runner With Docker
@@ -171,3 +143,15 @@ jobs:
         with:
           name: "v${{ needs.version.outputs.full_version }}"
           tag_name: "v${{ needs.version.outputs.full_version }}"
+
+      - name: 🚀 Update tags
+        run: |
+          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
+          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
+
+          git push -f origin --tags
+        env:
+          GIT_COMMITTER_NAME: Actions Bot
+          GIT_COMMITTER_EMAIL: actions@1d.lol
+          MINOR_TAG: ${{ needs.version.outputs.minor_version }}
+          MAJOR_TAG: ${{ needs.version.outputs.major_version }}
