--- a/.forgejo/workflows/docker-release.yaml
+++ b/.forgejo/workflows/docker-release.yaml
@@ -56,10 +56,42 @@ jobs:
           echo "Exporting major version: ${MAJOR_VERSION}"
           echo "major_forgejo_version=$MAJOR_VERSION" >> "$GITHUB_OUTPUT"
 
+  release:
+    name: Release
+    needs: [version]
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+
+    permissions:
+      contents: write
+
+    steps:
+      - name: ⤵️ Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+
+      - name: 🚀 Create release
+        # yamllint disable-line rule:line-length
+        uses: akkuman/gitea-release-action@f119011bd6c95ab53d2084ace7b539694ce9b252 # v1
+        with:
+          name: "v${{ needs.version.outputs.full_version }}"
+          tag_name: "v${{ needs.version.outputs.full_version }}"
+
+      - name: 🚀 Update tags
+        run: |
+          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
+          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
+
+          git push -f origin --tags
+        env:
+          GIT_COMMITTER_NAME: Actions Bot
+          GIT_COMMITTER_EMAIL: actions@1d.lol
+          MINOR_TAG: "v${{ needs.version.outputs.minor_version }}"
+          MAJOR_TAG: "v${{ needs.version.outputs.major_version }}"
+
   build-and-push:
     name: Docker Build and Push Container to registries
     runs-on: ubuntu-latest
-    needs: [tag]
+    needs: [version, release]
     timeout-minutes: 30
 
     permissions:
@@ -70,6 +102,8 @@ jobs:
       - name: ⤵️ Checkout repository
         # yamllint disable-line rule:line-length
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        with:
+          ref: "v${{ needs.version.outputs.full_version }}"
 
       - name: 🏗️ Set up Docker Buildx
         # yamllint disable-line rule:line-length
@@ -100,9 +134,9 @@ jobs:
           tags: |
             type=ref,event=branch
             type=raw,value=latest,enable={{is_default_branch}}
-            type=raw,value=${{ needs.version.outputs.full_version }},enable={{is_default_branch}}
-            type=raw,value=${{ needs.version.outputs.minor_version }},enable={{is_default_branch}}
-            type=raw,value=${{ needs.version.outputs.major_version }},enable={{is_default_branch}}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
           # yamllint disable rule:line-length
           labels: |
             org.opencontainers.image.title=Forgejo Runner With Docker
@@ -123,35 +157,3 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-  release:
-    name: Release
-    needs: [version, build-and-push]
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    permissions:
-      contents: write
-
-    steps:
-      - name: ⤵️ Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-
-      - name: 🚀 Create release
-        # yamllint disable-line rule:line-length
-        uses: akkuman/gitea-release-action@f119011bd6c95ab53d2084ace7b539694ce9b252 # v1
-        with:
-          name: "v${{ needs.version.outputs.full_version }}"
-          tag_name: "v${{ needs.version.outputs.full_version }}"
-
-      - name: 🚀 Update tags
-        run: |
-          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
-          git tag -fa "$MAJOR_TAG" -m "$MAJOR_TAG"
-
-          git push -f origin --tags
-        env:
-          GIT_COMMITTER_NAME: Actions Bot
-          GIT_COMMITTER_EMAIL: actions@1d.lol
-          MINOR_TAG: ${{ needs.version.outputs.minor_version }}
-          MAJOR_TAG: ${{ needs.version.outputs.major_version }}
