--- a/.forgejo/workflows/docker-release.yaml
+++ b/.forgejo/workflows/docker-release.yaml
@@ -134,6 +134,12 @@ jobs:
         # yamllint disable-line rule:line-length
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
+      - name: 🏗️ Setup qemu
+        # yamllint disable-line rule:line-length
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
       - name: 🏗️ Set up Docker Buildx
         # yamllint disable-line rule:line-length
         uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3
@@ -202,3 +208,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
