--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{j2,json,md,mjs,sh,ts,yaml,yml}]
+[*.{hcl,j2,json,md,mjs,sh,ts,yaml,yml}]
 indent_style = space
 indent_size = 2
 
