--- a/.forgejo/workflows/docker-release.yaml
+++ b/.forgejo/workflows/docker-release.yaml
@@ -14,6 +14,12 @@ on:
       - LICENSE
       - README.md
   workflow_dispatch:
+    inputs:
+      push_images:
+        description: "Push Images"
+        default: true
+        required: true
+        type: boolean
 
 concurrency:
   group: ${{ github.workflow }}
@@ -205,7 +211,7 @@ jobs:
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6
         with:
           context: .
-          push: true
+          push: ${{ inputs.push_images == true }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
