--- a/.forgejo/workflows/docker-release.yaml
+++ b/.forgejo/workflows/docker-release.yaml
@@ -56,6 +56,7 @@ jobs:
       - name: 🚀 Create release
         # yamllint disable-line rule:line-length
         uses: akkuman/gitea-release-action@fe8e0322804b48e34e3bddbbf6335bd2b1046eb7 # v1
+        if: ${{ inputs.push_images == true }}
         with:
           name: "v${{ steps.version.outputs.semver }}"
           tag_name: "v${{ steps.version.outputs.semver }}"
@@ -111,4 +112,4 @@ jobs:
           push: ${{ inputs.push_images == true }}
           files: |
             ./docker-bake.hcl
-          target: release
+          targets: release
